# backend/internal/api/oas_response_encoders_gen.go
@@ -605,6 +605,19 @@ func encodeGetOrganizationProfileResponse(response GetOrganizationProfileRes, w 
 	}
 }
 
+func encodeGetSupportChatResponse(response *SupportChatResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeListInvitationsResponse(response ListInvitationsRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *InvitationListResponse:
